fix: spacing

--- a/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/layout/styles.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/layout/styles.scss
@@ -60,6 +60,10 @@
   display: none;
 }
 
+br {
+  display: none;
+}
+
 .main-content .content > hr {
   margin: var(--size-m1) 0;
 
