--- a/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/table/styles.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/table/styles.scss
@@ -21,6 +21,7 @@
 }
 
 .tableheader {
+  margin-top: 0;
   margin-bottom: 0;
   padding: 7px 16px;
 
